--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@grpc/grpc-js": "^1.9.7"
+		"@grpc/grpc-js": "^1.9.7",
+		"google-protobuf": "^3.21.2"
 	}
 }
