:package: $ npm i google-protobuf
$ npx vite build

vite v4.5.0 building SSR bundle for production...
✓ 86 modules transformed.

vite v4.5.0 building for production...
✓ 62 modules transformed.
.svelte-kit/output/client/_app/version.json                              0.03 kB │ gzip: 0.05 kB
.svelte-kit/output/client/_app/immutable/assets/remove.74788b08.svg      0.42 kB │ gzip: 0.25 kB
.svelte-kit/output/client/.vite/manifest.json                            2.56 kB │ gzip: 0.48 kB
.svelte-kit/output/client/_app/immutable/assets/2.d95034d9.css           0.41 kB │ gzip: 0.26 kB
.svelte-kit/output/client/_app/immutable/nodes/0.8138219e.js             0.60 kB │ gzip: 0.38 kB
.svelte-kit/output/client/_app/immutable/nodes/1.6734fc87.js             1.03 kB │ gzip: 0.59 kB
.svelte-kit/output/client/_app/immutable/chunks/scheduler.e108d1fd.js    2.16 kB │ gzip: 1.02 kB
.svelte-kit/output/client/_app/immutable/chunks/singletons.35542b13.js   2.86 kB │ gzip: 1.46 kB
.svelte-kit/output/client/_app/immutable/nodes/2.7e203668.js             3.87 kB │ gzip: 1.90 kB
.svelte-kit/output/client/_app/immutable/chunks/index.c1d64499.js        5.54 kB │ gzip: 2.34 kB
.svelte-kit/output/client/_app/immutable/entry/app.ed077dc0.js           5.85 kB │ gzip: 2.32 kB
.svelte-kit/output/client/_app/immutable/entry/start.3d4c556c.js        24.89 kB │ gzip: 9.80 kB
✓ built in 257ms
.svelte-kit/output/server/_app/immutable/assets/remove.74788b08.svg   0.42 kB
.svelte-kit/output/server/.vite/manifest.json                         2.40 kB
.svelte-kit/output/server/_app/immutable/assets/_page.a9cb30b2.css    0.43 kB
.svelte-kit/output/server/internal.js                                 0.19 kB
.svelte-kit/output/server/entries/fallbacks/layout.svelte.js          0.24 kB
.svelte-kit/output/server/entries/endpoints/todo/_server.ts.js        0.53 kB
.svelte-kit/output/server/entries/endpoints/todo/_id_/_server.ts.js   0.67 kB
.svelte-kit/output/server/entries/fallbacks/error.svelte.js           0.89 kB
.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@grpc/grpc-js": "^1.9.8"
+		"@grpc/grpc-js": "^1.9.8",
+		"google-protobuf": "^3.21.2"
 	}
 }
