--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@grpc/grpc-js": "^1.9.9"
+		"@grpc/grpc-js": "^1.9.9",
+		"@protobuf-ts/grpc-transport": "^2.9.1"
 	}
 }
